--- a/index.html
+++ b/index.html
@@ -353,6 +353,53 @@
         .chat-input-area button:hover {
             background-color: #0ea5e9; /* Sky-500 */
         }
+
+        /* === MOBILE SPECIFIC ADJUSTMENTS (NEW ADDITIONS) === */
+        @media (max-width: 767px) { /* Applies to screens smaller than 768px (Tailwind's md breakpoint) */
+            /* Adjust hero heading font size for smaller screens */
+            #hero-main-heading {
+                font-size: 3rem; /* Smaller font size for mobile */
+                white-space: normal; /* Allow text to wrap on mobile */
+                line-height: 1.2; /* Adjust line height for better readability */
+            }
+            .hero-main-heading .gradient-text {
+                display: block; /* Ensure gradient text breaks line if needed */
+            }
+
+            /* Adjust parallax text font size for smaller screens */
+            .parallax-text {
+                font-size: 15vw; /* Slightly larger vw for impact on small screens, but still responsive */
+            }
+
+            /* Ensure main content areas have proper padding on smaller screens */
+            .container {
+                padding-left: 1rem;
+                padding-right: 1rem;
+            }
+
+            /* Adjust chat modal position for smaller screens */
+            .chat-modal {
+                bottom: 1rem;
+                right: 1rem;
+                left: 1rem; /* Make it full width minus padding */
+                width: auto; /* Allow width to be determined by left/right */
+                height: 80vh; /* Take up more vertical space */
+            }
+
+            /* Adjust support button position for smaller screens */
+            #support-button {
+                bottom: 1rem;
+                right: 1rem;
+                width: 50px; /* Slightly smaller button */
+                height: 50px;
+                font-size: 1.5rem;
+            }
+
+            /* Adjust feature cards for single column on mobile */
+            .grid.md\:grid-cols-2.lg\:grid-cols-2 {
+                grid-template-columns: 1fr; /* Force single column on mobile */
+            }
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -804,7 +851,7 @@
         const chatMessages = document.getElementById('chat-messages');
 
         // IMPORTANT: Replace with your actual n8n webhook URL for the AI chatbot
-        const N8N_CHAT_WEBHOOK_URL = 'https://suitable-rapidly-terrier.ngrok-free.app/webhook/skynet'; 
+        const N8N_CHAT_WEBHOOK_URL = 'https://suitable-rapidly-terrier.ngrok-free.app/webhook-test/skynet'; 
 
         // Toggle chat modal visibility
         supportButton.addEventListener('click', () => {
