--- a/index.html
+++ b/index.html
@@ -399,6 +399,12 @@
             .grid.md\:grid-cols-2.lg\:grid-cols-2 {
                 grid-template-columns: 1fr; /* Force single column on mobile */
             }
+
+            /* NEW: Adjust parallax background for mobile to reduce "zoomed in" effect */
+            .parallax-background {
+                background-size: auto 100%; /* Prioritize filling height, let width adjust proportionally */
+                background-position: center; /* Keep it centered horizontally */
+            }
         }
     </style>
 </head>
