--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
             transform: translate(-50%, -50%) scale(1);
             will-change: transform, opacity; /* Performance optimization */
             text-align: center;
+            /* Text shadow for depth (kept as per previous request for this specific text) */
+            text-shadow: 0 0 20px rgba(56, 189, 248, 0.6), 0 0 40px rgba(167, 139, 250, 0.4);
         }
         
         /* Feature Card Enhancements */
@@ -100,10 +102,11 @@
             overflow: hidden; /* Hide overflow for glow */
         }
 
+        /* MODIFIED: Enhanced glow and shadow for feature cards */
         .feature-card:hover {
             transform: translateY(-5px) scale(1.02);
             border-color: #38bdf8; /* sky-400 */
-            box-shadow: 0 0 30px rgba(56, 189, 248, 0.5); /* Subtle glow */
+            box-shadow: 0 0 40px rgba(56, 189, 248, 0.7); /* Stronger glow */
         }
 
         .feature-card::before {
@@ -113,15 +116,17 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(56, 189, 248, 0.2) 0%, transparent 70%);
+            background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(56, 189, 248, 0.3) 0%, transparent 70%); /* Stronger initial glow */
             opacity: 0;
             transition: opacity 0.3s ease;
             pointer-events: none;
             z-index: -1;
         }
 
+        /* MODIFIED: Stronger glow on hover for feature cards */
         .feature-card:hover::before {
             opacity: 1;
+            background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(56, 189, 248, 0.5) 0%, transparent 70%); /* Even stronger on hover */
         }
 
         /* Custom animation for fade-in on scroll */
@@ -176,14 +181,27 @@
             z-index: 1;
         }
 
+        /* MODIFIED: Stronger glow on hover for magnetic buttons */
         .magnetic-button:hover::before {
             opacity: 1;
+            background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.2) 0%, transparent 70%); /* Stronger glow */
         }
 
         /* Ensure hero heading stays on one line */
         #hero-main-heading {
             white-space: nowrap;
+            /* REMOVED: text-shadow property to revert to original look */
         }
+        /* NEW: Text shadow for header logo */
+        #header .float a {
+            text-shadow: 0 0 10px rgba(56, 189, 248, 0.6);
+        }
+
+        /* NEW: Header background on scroll with subtle glow */
+        #header.bg-black\/80 { /* Targeting the class added on scroll */
+            box-shadow: 0 2px 15px rgba(56, 189, 248, 0.3); /* Subtle blue glow */
+        }
+
 
         /* Support Button Styles */
         #support-button {
@@ -203,12 +221,22 @@
             cursor: pointer;
             transition: all 0.3s ease;
             z-index: 999; /* Ensure it's above other content */
+            /* NEW: Add pulse animation */
+            animation: pulse-glow 2s infinite alternate;
         }
+        /* MODIFIED: Enhanced glow on hover for support button */
         #support-button:hover {
             background-color: #0ea5e9; /* Sky-500 */
             transform: translateY(-3px);
-            box-shadow: 0 8px 20px rgba(56, 189, 248, 0.6);
+            box-shadow: 0 8px 25px rgba(56, 189, 248, 0.8); /* Stronger glow */
         }
+
+        /* NEW: Pulse glow animation for support button */
+        @keyframes pulse-glow {
+            0% { box-shadow: 0 5px 15px rgba(56, 189, 248, 0.4); }
+            100% { box-shadow: 0 5px 25px rgba(56, 189, 248, 0.8); }
+        }
+
 
         /* Chat Modal Styles */
         .chat-modal {
@@ -220,7 +248,8 @@
             background-color: rgba(17, 24, 39, 0.95); /* Darker gray-900 with transparency */
             border: 1px solid #4b5563; /* Gray-600 */
             border-radius: 1rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            /* MODIFIED: Enhanced shadow for chat modal */
+            box-shadow: 0 10px 40px rgba(56, 189, 248, 0.5), 0 0 20px rgba(167, 139, 250, 0.3);
             display: flex;
             flex-direction: column;
             overflow: hidden;
@@ -402,9 +431,10 @@
 
             /* NEW: Adjust parallax background for mobile to reduce "zoomed in" effect */
             .parallax-background {
-                /* Changed from auto 100% to 100% auto to prioritize width fitting */
-                background-size: 100% auto; /* Prioritize filling width, let height adjust proportionally */
-                background-position: center; /* Keep it centered horizontally */
+                /* Changed from auto 100% to contain to prioritize full image visibility */
+                background-size: contain; /* Scales the image down to fit fully within the container */
+                background-repeat: no-repeat; /* Prevent tiling if image is smaller than container */
+                background-position: center; /* Center the image */
             }
         }
     </style>
@@ -660,8 +690,12 @@
         window.addEventListener('scroll', () => {
             if (window.scrollY > 50) {
                 header.classList.add('bg-black/80', 'backdrop-blur-sm', 'border-b', 'border-gray-800');
+                // NEW: Add subtle box-shadow to header on scroll
+                header.style.boxShadow = '0 2px 15px rgba(56, 189, 248, 0.3)';
             } else {
                 header.classList.remove('bg-black/80', 'backdrop-blur-sm', 'border-b', 'border-gray-800');
+                // NEW: Remove box-shadow when not scrolled
+                header.style.boxShadow = 'none';
             }
         });
 
@@ -689,11 +723,12 @@
         // --- Animated Particle Background ---
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
+        // MODIFIED: Increased particle count for a denser effect
         let particles = [];
-        const numParticles = 100;
+        const numParticles = 150; // Increased from 100
         const particleSize = 2;
-        const particleSpeed = 0.5;
-        const maxDistance = 100; // Max distance for lines between particles
+        const particleSpeed = 0.7; // Slightly increased speed
+        const maxDistance = 150; // Increased max distance for lines
 
         // Resize canvas to fill window
         function resizeCanvas() {
