--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <div class="container mx-auto px-6">
                 <div class="max-w-4xl mx-auto bg-gray-900/50 border border-gray-800 rounded-2xl p-4 md:p-6 shadow-2xl shadow-sky-500/10">
                     <!-- Calendly inline widget begin -->
-                    <div class="calendly-inline-widget" data-url="https://calendly.com/rayray_1?fbclid=PAQ0xDSwLaEpFleHRuA2FlbQIxMAABp1KKp7f9f_m4QOVYhBydjUM804cKIgJq5YwwtBoIhYBJjEdjSEaALEeuvrQw_aem_AVw-3lEHokX6l0I3Sqb5QA&background_color=000000&text_color=ffffff&primary_color=38bdf8" style="min-width:320px;height:700px;"></div>
+                    <div class="calendly-inline-widget" data-url="https://calendly.com/skynetautommation" style="min-width:320px;height:700px;"></div>
                     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
                     <!-- Calendly inline widget end -->
                 </div>
@@ -69,4 +69,5 @@
 
     <script>lucide.createIcons();</script>
 </body>
+
 </html>
